--- a/pyfi.cabal
+++ b/pyfi.cabal
@@ -2,9 +2,9 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                pyfi
-version:             0.4.0.2
+version:             0.4.0.3
 synopsis:            Call python inline from haskell
-description:         WARNING: Project in alpha. Call python from haskell with ease.
+description:         PYthon Function Interface: Wrap python functions with haskell.
 homepage:            http://github.com/Russell91/json-python
 license:             MIT
 license-file:        LICENSE
