--- a/pyfi.cabal
+++ b/pyfi.cabal
@@ -14,13 +14,22 @@ maintainer:          russell.s.stewart@gmail.com
 category:            Language
 build-type:          Simple
 -- extra-source-files:
-cabal-version:       >=1.10
+cabal-version:       >= 1.10
 
 library
   -- main-is:             Main.hs
-  exposed-modules:     Python, Str
-  other-extensions:    TemplateHaskell, ForeignFunctionInterface, QuasiQuotes, OverloadedStrings
-  build-depends:       base >=4.6 && < 4.8, template-haskell >=2.8, aeson >=0.8 && <0.9, bytestring >=0.10 && <0.11, containers >= 0.5, pureMD5 >= 2.0
+  exposed-modules:     Python
+                     , Str
+  other-extensions:    TemplateHaskell
+                     , ForeignFunctionInterface
+                     , QuasiQuotes
+                     , OverloadedStrings
+  build-depends:       base >=4.6
+                     , template-haskell >= 2.8
+                     , aeson >=0.8
+                     , bytestring >=0.10
+                     , containers >= 0.5
+                     , pureMD5 >= 2.0
   -- hs-source-dirs:
   default-language:    Haskell2010
   PkgConfig-Depends:   python
